--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.19.0
 colorama==0.4.6
+cryptography==43.0.1
 confection==0.1.5
 contourpy==1.3.0
 coqpit==0.0.17
@@ -94,7 +95,8 @@ preshed==3.0.9
 prompt_toolkit==3.0.47
 protobuf==5.28.0
 psutil==6.0.0
-psycopg2==2.9.9
+# psycopg2==2.9.9
+psycopg2-binary
 pure_eval==0.2.3
 PyAudio==0.2.14
 pycparser==2.22
