--- a/requirements.txt
+++ b/requirements.txt
@@ -95,8 +95,7 @@ preshed==3.0.9
 prompt_toolkit==3.0.47
 protobuf==5.28.0
 psutil==6.0.0
-# psycopg2==2.9.9
-psycopg2-binary
+psycopg2-binary==2.9.9
 pure_eval==0.2.3
 PyAudio==0.2.14
 pycparser==2.22
@@ -155,6 +154,7 @@ umap-learn==0.5.6
 Unidecode==1.3.8
 urllib3==2.2.2
 vosk==0.3.45
+waitress
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
