--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 geopy==2.4.1
+langchain
+langchain_experimental
+langchain_openai
 psycopg2-binary==2.9.9
 PyAudio==0.2.14
 python-dotenv==1.0.1
