--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,204 @@
+absl-py==2.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+alembic==1.13.3
+aniso8601==9.0.1
+annotated-types==0.7.0
+anyascii==0.3.2
+anyio==4.6.2.post1
+attrs==24.2.0
+audioread==3.0.1
+babel==2.16.0
+bangla==0.0.2
+blinker==1.8.2
+blis==0.7.11
+bnnumerizer==0.0.2
+bnunicodenormalizer==0.1.7
+catalogue==2.0.10
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+cloudpathlib==0.20.0
+confection==0.1.5
+contourpy==1.3.0
+coqpit==0.0.17
 cryptography==43.0.1
+cycler==0.12.1
+cymem==2.0.8
+Cython==3.0.11
+dataclasses-json==0.6.7
+dateparser==1.1.8
+decorator==5.1.1
+distro==1.9.0
+docopt==0.6.2
+einops==0.8.0
+encodec==0.1.1
+filelock==3.16.1
 flasgger==0.9.7.1
 Flask==3.0.3
 Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
+fonttools==4.54.1
+frozenlist==1.5.0
+fsspec==2024.10.0
+g2pkk==0.1.2
+geographiclib==2.0
 geopy==2.4.1
+greenlet==3.1.1
+grpcio==1.67.0
+gruut==2.2.3
+gruut-ipa==0.13.0
+gruut-lang-de==2.0.1
+gruut-lang-en==2.0.1
+gruut-lang-es==2.0.1
+gruut-lang-fr==2.0.2
+h11==0.14.0
+hangul-romanize==0.1.0
+httpcore==1.0.6
+httpx==0.27.2
+huggingface-hub==0.26.1
+idna==3.10
+inflect==7.4.0
+itsdangerous==2.2.0
+jamo==0.4.1
+jieba==0.42.1
+Jinja2==3.1.4
+jiter==0.6.1
+joblib==1.4.2
+jsonlines==1.2.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.7
+langchain==0.3.4
+langchain-community==0.3.3
+langchain-core==0.3.13
+langchain-experimental==0.3.2
+langchain-openai==0.2.3
+langchain-text-splitters==0.3.0
+langcodes==3.4.1
+langsmith==0.1.137
+language_data==1.2.0
+lazy_loader==0.4
+librosa==0.10.2.post1
+llvmlite==0.43.0
+Mako==1.3.6
+marisa-trie==1.2.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.23.0
+matplotlib==3.9.2
+mdurl==0.1.2
+mistune==3.0.2
+more-itertools==10.5.0
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+murmurhash==1.0.10
+mypy-extensions==1.0.0
+networkx==2.8.8
+nltk==3.9.1
+num2words==0.5.13
+numba==0.60.0
+numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+openai==1.52.2
+orjson==3.10.10
+packaging==24.1
+pandas==1.5.3
+pillow==11.0.0
+platformdirs==4.3.6
+pooch==1.8.2
+preshed==3.0.9
+propcache==0.2.0
+protobuf==5.28.3
+psutil==6.1.0
 psycopg2-binary==2.9.9
 PyAudio==0.2.14
+pycparser==2.22
+pydantic==2.9.2
+pydantic-settings==2.6.0
+pydantic_core==2.23.4
+Pygments==2.18.0
+PyJWT==2.9.0
+pynndescent==0.5.13
+pyparsing==3.2.0
+pypinyin==0.53.0
+pysbd==0.3.4
+python-crfsuite==0.9.11
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.3
+rpds-py==0.20.0
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.5
+sniffio==1.3.1
+soundfile==0.12.1
+soxr==0.5.0.post1
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==2.0.31
+srsly==2.4.8
+srt==3.5.3
+SudachiDict-core==20241021
+SudachiPy==0.6.8
+sympy==1.13.1
+tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+thinc==8.2.5
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tokenizers==0.19.1
+torch==2.5.0
+torchaudio==2.5.0
+tqdm==4.66.5
+trainer==0.0.36
+transformers==4.44.2
+triton==3.1.0
+TTS==0.22.0
+typeguard==4.4.0
+typer==0.12.5
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzlocal==5.2
+umap-learn==0.5.6
+Unidecode==1.3.8
+urllib3==2.2.3
 vosk==0.3.45
 waitress==3.0.0
+wasabi==1.1.3
 Wave==0.0.2
-transformers==4.44.2
-TTS==0.22.0
+weasel==0.4.1
+websockets==13.1
+Werkzeug==3.0.6
+wrapt==1.16.0
+yarl==1.16.0
