--- a/requirements_main.txt
+++ b/requirements_main.txt
@@ -1,3 +1,4 @@
+contourpy==1.3.0
 cryptography==43.0.1
 flasgger==0.9.7.1
 Flask==3.0.3
@@ -6,6 +7,9 @@ Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 geopy==2.4.1
+langchain==0.3.4
+langchain_experimental==0.3.2
+langchain_openai==0.2.3
 psycopg2-binary==2.9.9
 PyAudio==0.2.14
 python-dotenv==1.0.1
@@ -15,6 +19,3 @@ waitress==3.0.0
 Wave==0.0.2
 transformers==4.44.2
 TTS==0.22.0
-# langchain
-# langchain_openai
-# langchain_experimental
