--- a/requirements.txt
+++ b/requirements.txt
@@ -171,6 +171,7 @@ srt==3.5.3
 SudachiDict-core==20241021
 SudachiPy==0.6.8
 sympy==1.13.1
+tabulate==0.9.0
 tenacity==9.0.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
